Fix illustration alignment

--- a/sass/basics.scss
+++ b/sass/basics.scss
@@ -102,8 +102,20 @@ a {
 }
 
 //-------------------------------------
+//	LOGO
+//-------------------------------------
+.logo {
+	position: fixed;
+	z-index: 52;
+	top: 30px;
+	left: 30px;
+	width: 28px;
+}
+
+//-------------------------------------
 //	ICON MENU
 //-------------------------------------
+
 .menu-btn {
 	width: 50px;
 	height: 50px;
